# Research-assistant

./: .env  README.md  pyproject.toml
app/: cli.py  config.py  main.py
app/graph/: nodes.py  workflow.py
app/models/: schemas.py  state.py
app/services/: context_service.py  llm_service.py  search_service.py  storage_service.py
app/utils/: monitoring.py  validators.py
deployment/: Dockerfile  docker-compose.yml  requirements.txt
tests/: conftest.py  test_api.py  test_graph.py  test_schemas.py
