[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "research-assistant"
version = "0.1.0"
description = "Context-aware research brief generator using LangGraph and LangChain"
authors = ["Sachin Singh vidaressay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
pydantic = "^2.5.0"
langchain = "^0.1.0"
langchain-community = "^0.0.10"
langchain-openai = "^0.0.5"
langgraph = "^0.0.26"
langsmith = "^0.0.69"
python-dotenv = "^1.0.0"
click = "^8.1.7"
httpx = "^0.25.2"
aiosqlite = "^0.19.0"
beautifulsoup4 = "^4.12.2"
python-multipart = "^0.0.6"
tenacity = "^8.2.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"

[tool.poetry.scripts]
research-cli = "app.cli:main"